feat: high-throughput batch-trace command with persistent guest sessions (#3)
* feat: add high-throughput batch-trace command with persistent guest sessions

- Implement GuestHarness resident inside long-lived guest JVM with disposable child ClassLoader per job
- Implement PersistentGuestSession orchestrating JDI debugger events across sequential jobs
- Add BatchTraceWorker and BatchTraceService for concurrent NDJSON processing over stdin or file
- Add batch-trace CLI subcommand to App with --workers and --max-jobs-per-worker options
- Support virtual System.in stream proxying and per-job stdout/stderr offset isolation
- Update README with batch-trace documentation, usage examples, and schema specifications
- Achieve 100% line and branch coverage across all new batch and guest components

* docs: add batch tracing performance benchmark comparison to README

* build: bump version to 3.1.0

* fix(batch): address review feedback on session lifecycle and stream safety

* fix(batch): address review feedback on session lifecycle and exception handling

* Add 'pretty' option for JSON output formatting

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Change class loader to platform class loader

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* fix: isolate guest classloader, enforce batch budgets, and fix session recycling

* fix(batch): synchronize execute, route snapshots, and materialize output slices

- Synchronize BatchTraceWorker.execute to guarantee thread safety.
- Route chronological and line-targeted snapshots directly from PersistentGuestSession to serialization.
- Materialize OutputSlice and ExecutionSnapshot outputs to detach buffers across job resets.
- Fix literal \n formatting in batch-trace CLI usage documentation.
- Align --result-envelope documentation schema with TraceResult.

* Address Copilot PR review feedback on batch tracing and harness resiliency

* fix(batch